# mylife_ai

./: pyproject.toml
mylife_ai/: main.py
